--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,7 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bianculli's Food | Servicios</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <!--Import my css -->
+    <link rel="stylesheet" href="../css/style3..css">
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
@@ -16,7 +23,7 @@
 <!-- Vianda -->
 
 <body>
-    <header>
+    <!-- <header>
         <img class="logo" src="../images/muestra/logo.png" alt="logo-empresa">
         <nav class="navbar">
             <ul class="navbar-list">
@@ -27,20 +34,61 @@
                 <li class="navbar-list-li"><a class="navbar-list-text" href="./contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
+    </header> -->
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar-per" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
     </header>
     <!-- FIN HEADER -->
     <!-- MAIN SERVICIOS -->
     <main>
-        <div class="text-main">
+        <div class="text-center mt-4 mb-4">
             <h2>SERVICIOS</h2>
         </div>
         <!-- IMAGEN MAIN SERVICIOS -->
-        <div class="service-img-main">
+        <!-- <div class="service-img-main">
             <img src="../images/services/main-service.jpg" alt="Servicios Imagen">
+        </div> -->
+        <div class="image-main-service  mx-auto">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../images/services/main-service.jpg" class="d-block w-100" alt="main-image">
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- FIN IMAGEN MAIN SERVICIOS -->
         <!-- DESCRIPCION SERVICIOS -->
-        <div class="services-description">
+        <!-- <div class="services-description">
             <div class="service-block">
                 <h3>Catering</h3>
                 <img src="../images/services/catering.jpg" alt="">
@@ -73,19 +121,62 @@
                     cum
                     debitis atque.</p>
             </div>
+        </div> -->
+        <div class="services">
+            <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-evenly mb-4">
+                <div class="col expand">
+                    <div class="card total text-bg-light border-dark">
+                        <img src="../images/services/catering.jpg" class="card-img-top mx-auto" alt="catering">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fs-2 ">Catering</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col expand">
+                    <div class="card total text-bg-light border-dark">
+                        <img src="../images/services/fiesta.jpg" class="card-img-top mx-auto" alt="fiesta">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fs-2">Fiesta</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col expand">
+                    <div class="card total text-bg-light border-dark">
+                        <img src="../images/services/gourmet.jpg" class="card-img-top mx-auto" alt="gourmet">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fs-2">Gourmet</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col expand">
+                    <div class="card total text-bg-light border-dark">
+                        <img src="../images/services/vianda.jpg" class="card-img-top mx-auto" alt="vianda">
+                        <div class="card-body">
+                            <h5 class="card-title text-center fs-2">Viandas</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- FIN DESCRIPCION SERVICIOS -->
     </main>
     <!-- FIN SERVICIOS -->
     <!-- INICIO FOOTER -->
-    <footer>
+    <!-- <footer>
         <p class="reserved">© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
         <form>
             <input type="email" name="newslatter-email-footer" id="newslatter-email-footer"
                 placeholder="Ingresa tu email">
             <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer"
                 class="botton-newsletter">
-            <!-- <input type="sumbit" name="newslatter-sumbit-footer" id="newslatter-sumbit-footer" placeholder="Enviar"> -->
         </form>
         <div>
             <a href="https://www.instagram.com" target="_blank"><img class="img-footer"
@@ -97,8 +188,34 @@
             <a href="https://www.Whatsapp.com" target="_blank"><img class="img-footer"
                     src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
         </div>
+    </footer> -->
+    <footer class="text-center text-lg-start text-muted color-lg flex">
+        <!-- Copyright -->
+        <div class="p-2 font-footer" style="background-color: #f8f9fa;">
+            <p>© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
+        </div>
+        <form class="form-floating">
+            <input type="email" class="mid-center" id="floatingInputValue" placeholder="name@example.com"
+                value="test@example.com">
+        </form>
+        <div class="social-media">
+            <a href="https://www.instagram.com" target="_blank"><img src="../images/footer/instagram.png"
+                    alt="instagram-logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../images/footer/youtube.png"
+                    alt="youtube-logo"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="../images/footer/twitter.png"
+                    alt="twitter-logo"></a>
+            <a href="https://www.whatsapp.com" target="_blank"><img src="../images/footer/whatsapp.png"
+                    alt="instagram-logo"></a>
+        </div>
     </footer>
     <!-- FIN FOOTER -->
+    <!-- Import boostrap.css -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <!-- Import Materializecss.css -->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
