--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <!--Import my css -->
-    <link rel="stylesheet" href="./css/style3..css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, home ">
+    <meta name="Description" content="Bienvenido a Bianculli's Food! El mejor catering del país">
 </head>
 
 <body>
@@ -57,6 +60,7 @@
 
     </header>
     <!-- MAIN -->
+    <main class="index">
         <section class="home-carrousel mx-auto mt-4 mb-4">
             <!-- <img src="./images/home/carrousel1.jpg" alt="carrousel-home"> -->
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -84,33 +88,42 @@
             </div>
         </section>
         <section class="home-img-with-text ms-5 me-5">
-                    <div class="card text-bg-light  border-dark mb-3" style="max-width: 540px;">
-                        <div class="row g-0">
-                          <div class="col-md-4 img-text">
-                            <img src="./images/home/nosotros.jpg" class="img-fluid rounded-start img-100" alt="nosotros.jpg">
-                          </div>
-                          <div class="col-md-8">
-                            <div class="card-body tamaño">
-                              <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit labore exercitationem sit atque, natus nemo tenetur maxime perspiciatis explicabo dicta aliquid ipsa, non assumenda debitis facere. Distinctio quisquam libero delectus.</p>
-                            </div>
-                          </div>
+            <div class="card text-bg-light  border-dark mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4 img-text">
+                        <img src="./images/home/nosotros.jpg" class="img-fluid rounded-start img-100"
+                            alt="nosotros.jpg">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body tamaño">
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit labore
+                                exercitationem sit atque, natus nemo tenetur maxime perspiciatis explicabo dicta aliquid
+                                ipsa, non assumenda debitis facere. Distinctio quisquam libero delectus.</p>
                         </div>
-                      </div>
+                    </div>
+                </div>
+            </div>
         </section>
+    </main>
     <!-- FOOTER -->
     <footer class="text-center text-lg-start text-muted color-lg flex">
         <!-- Copyright -->
         <div class="p-2 font-footer" style="background-color: #f8f9fa;">
-           <p>© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
+            <p>© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
         </div>
         <form class="form-floating">
-            <input type="email" class="mid-center" id="floatingInputValue" placeholder="name@example.com" value="test@example.com">
-          </form>
+            <input type="email" class="mid-center" id="floatingInputValue" placeholder="name@example.com"
+                value="test@example.com">
+        </form>
         <div class="social-media">
-            <a href="https://www.instagram.com" target="_blank"><img src="./images/footer/instagram.png" alt="instagram-logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img src="./images/footer/youtube.png" alt="youtube-logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="./images/footer/twitter.png" alt="twitter-logo"></a>
-            <a href="https://www.whatsapp.com" target="_blank"><img src="./images/footer/whatsapp.png" alt="instagram-logo"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="./images/footer/instagram.png"
+                    alt="instagram-logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="./images/footer/youtube.png"
+                    alt="youtube-logo"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="./images/footer/twitter.png"
+                    alt="twitter-logo"></a>
+            <a href="https://www.whatsapp.com" target="_blank"><img src="./images/footer/whatsapp.png"
+                    alt="instagram-logo"></a>
         </div>
     </footer>
     <!-- Import boostrap.css -->
