--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,22 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bianculli's Food | Galeria</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <!--Import my css -->
+    <link rel="stylesheet" href="../css/style.css">
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, fotos, galeria, galeria fotos">
+    <meta name="Description" content="Mira imagenes de algunos de los eventos que estuvimos!">
 </head>
 
 <body>
     <!-- INICIO HEADER -->
     <header>
-        <img class="logo" src="../images/muestra/logo.png" alt="logo-empresa">
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li class="navbar-list-li"><a class="navbar-list-text" href="../index.html">HOME</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./servicios.html">SERVICIOS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./galeria.html">GALERIA</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./nosotros.html">NOSOTROS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./contacto.html">CONTACTO</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar-per" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- FIN HEADER -->
@@ -40,41 +70,33 @@
     </main>
     <!-- FIN MAIN GALERIA -->
     <!-- INICIO FOOTER -->
-    <!-- <footer>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img src="../images/footer/instagram.png" alt="Instagram Logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img src="../images/footer/youtube.png" alt="Youtube Logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="../images/footer/twitter.png" alt="Twitter Logo"></a>
-            <a href="https://www.Whatsapp.com" target="_blank"><img src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
-            <form>
-                <input type="email" name="newslatter-email-footer" id="newslatter-email-footer" placeholder="Ingresa tu email">
-                <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer">
-            </form>
+    <footer class="text-center text-lg-start text-muted color-lg flex">
+        <!-- Copyright -->
+        <div class="p-2 font-footer" style="background-color: #f8f9fa;">
             <p>© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
         </div>
-    </footer> -->
-    <footer>
-        <p class="reserved">© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
-        <form>
-            <input type="email" name="newslatter-email-footer" id="newslatter-email-footer"
-                placeholder="Ingresa tu email">
-            <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer"
-                class="botton-newsletter">
-            <!-- <input type="sumbit" name="newslatter-sumbit-footer" id="newslatter-sumbit-footer" placeholder="Enviar"> -->
+        <form class="form-floating">
+            <input type="email" class="mid-center" id="floatingInputValue" placeholder="name@example.com"
+                value="test@example.com">
         </form>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img class="img-footer"
-                    src="../images/footer/instagram.png" alt="Instagram Logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img class="img-footer" src="../images/footer/youtube.png"
-                    alt="Youtube Logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img class="img-footer" src="../images/footer/twitter.png"
-                    alt="Twitter Logo"></a>
-            <a href="https://www.Whatsapp.com" target="_blank"><img class="img-footer"
-                    src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
+        <div class="social-media">
+            <a href="https://www.instagram.com" target="_blank"><img src="../images/footer/instagram.png"
+                    alt="instagram-logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../images/footer/youtube.png"
+                    alt="youtube-logo"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="../images/footer/twitter.png"
+                    alt="twitter-logo"></a>
+            <a href="https://www.whatsapp.com" target="_blank"><img src="../images/footer/whatsapp.png"
+                    alt="instagram-logo"></a>
         </div>
     </footer>
     <!-- FIN FOOTER -->
-
+    <!-- Import Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+    <!-- Import Materializecss.css -->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
