--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,43 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bianculli's Food | Sobre Nosotros</title>
-    <link rel="stylesheet" href="../css/style2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <!--Import my css -->
+    <link rel="stylesheet" href="../css/style.css">
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+      <!-- KEYWORDS -->
+      <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, nosotros, historia">
+      <meta name="Description" content="Conoce un poco acerca de la historia de Bianculli's Food.">
 </head>
 
 <body>
-    <div class="nostros-grid-container">
-        <!-- INICIO HEADER -->
-        <header class="header">
-            <img src="../images/muestra/logo.png" alt="logo-empresa">
-            <nav>
-                <ul class="navbar-list">
-                    <li><a class="navbar-list-text" href="../index.html">HOME</a></li>
-                    <li><a class="navbar-list-text" href="./servicios.html">SERVICIOS</a></li>
-                    <li><a class="navbar-list-text" href="./galeria.html">GALERIA</a></li>
-                    <li><a class="navbar-list-text" href="./nosotros.html">NOSOTROS</a></li>
-                    <li><a class="navbar-list-text" href="./contacto.html">CONTACTO</a></li>
-                </ul>
-            </nav>
-        </header>
-        <!-- <header>
-        <img class="logo" src="../images/muestra/logo.png" alt="logo-empresa">
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li class="navbar-list-li"><a class="navbar-list-text" href="../index.html">HOME</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./servicios.html">SERVICIOS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./galeria.html">GALERIA</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./nosotros.html">NOSOTROS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./contacto.html">CONTACTO</a></li>
-            </ul>
+    <!-- INICIO HEADER -->
+    <header class="header">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar-per" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-    </header> -->
-        <!-- FIN HEADER -->
-        <!-- MAIN NOSOSTROS -->
-        <main class="nosotros">
-            <h2>LA EMPRESA</h2>
-            <div class ="nosotros-text">
+    </header>
+    <!-- FIN HEADER -->
+    <!-- MAIN NOSOSTROS -->
+    <main class="nosotros">
+        <h2>LA EMPRESA</h2>
+        <!-- <div class ="nosotros-text">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolore in corporis. Natus consequatur
                     harum temporibus obcaecati voluptas laborum numquam, quaerat officia cumque in minima autem aspernatur
@@ -51,63 +67,46 @@
                     magnam. Velit ex ratione suscipit, exercitationem voluptatum ipsam sed!
                 </p>
                 <iframe src="../images/nosotros/nosotros.mp4" alt="Sobre Nosotros">
+            </div> -->
+        <div class="tamaño-nosotros ms-5 me-5">
+            <div class="card mb-3 text-center text-bg-light border-dark">
+                <img src="../images/nosotros/card-text.jpg" class="card-img-top img-tamaño mx-auto mt-2" alt="nosotros-image">
+                <div class="card-body">
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi neque commodi illo autem eveniet dicta aspernatur rerum, corrupti nostrum quam doloremque quas ab ad amet recusandae hic, eum placeat ipsa accusantium, odio officiis. Fuga veritatis modi provident magnam consequuntur quasi maxime quam pariatur rerum nobis, in sapiente sequi eius voluptatum.</p>
+                    <p class="card-text"><small class="text-muted">Bianculli's Food</small></p>
+                </div>
             </div>
-        </main>
-        <!-- FIN MAIN NOSOTROS -->
-        <!-- INICIO FOOTER -->
-        <!-- <footer>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img src="../images/footer/instagram.png" alt="Instagram Logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img src="../images/footer/youtube.png" alt="Youtube Logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="../images/footer/twitter.png" alt="Twitter Logo"></a>
-            <a href="https://www.Whatsapp.com" target="_blank"><img src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
-            <form>
-                <input type="email" name="newslatter-email-footer" id="newslatter-email-footer" placeholder="Ingresa tu email">
-                <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer">
-            </form>
+        </div>
+    </main>
+    <!-- FIN MAIN NOSOTROS -->
+    <!-- INICIO FOOTER -->
+    <footer class="text-center text-lg-start text-muted color-lg flex">
+        <!-- Copyright -->
+        <div class="p-2 font-footer" style="background-color: #f8f9fa;">
             <p>© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
         </div>
-    </footer> -->
-        <!-- <footer>
-        <p class="reserved">© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
-        <form>
-            <input type="email" name="newslatter-email-footer" id="newslatter-email-footer"
-                placeholder="Ingresa tu email">
-            <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer" class="botton-newsletter"> -->
-        <!-- <input type="sumbit" name="newslatter-sumbit-footer" id="newslatter-sumbit-footer" placeholder="Enviar"> -->
-        <!-- </form>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img class="img-footer" src="../images/footer/instagram.png"
-                    alt="Instagram Logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img class="img-footer" src="../images/footer/youtube.png"
-                    alt="Youtube Logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img class="img-footer" src="../images/footer/twitter.png"
-                    alt="Twitter Logo"></a>
-            <a href="https://www.Whatsapp.com" target="_blank"><img class="img-footer" src="../images/footer/whatsapp.png"
-                    alt="Whatsapp Logo"></a>
+        <form class="form-floating">
+            <input type="email" class="mid-center" id="floatingInputValue" placeholder="name@example.com"
+                value="test@example.com">
+        </form>
+        <div class="social-media">
+            <a href="https://www.instagram.com" target="_blank"><img src="../images/footer/instagram.png"
+                    alt="instagram-logo"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="../images/footer/youtube.png"
+                    alt="youtube-logo"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="../images/footer/twitter.png"
+                    alt="twitter-logo"></a>
+            <a href="https://www.whatsapp.com" target="_blank"><img src="../images/footer/whatsapp.png"
+                    alt="instagram-logo"></a>
         </div>
-    </footer> -->
-        <footer class="footer">
-            <p class="reserved">© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
-            <form>
-                <input type="email" name="newslatter-email-footer" id="newslatter-email-footer"
-                    placeholder="Ingresa tu email">
-                <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer"
-                    class="botton-newsletter" placeholder="Subscribite!">
-            </form>
-            <div class="footer-img">
-                <a href="https://www.instagram.com" target="_blank"><img class="img-footer"
-                        src="../images/footer/instagram.png" alt="Instagram Logo"></a>
-                <a href="https://www.youtube.com" target="_blank"><img class="img-footer"
-                        src="../images/footer/youtube.png" alt="Youtube Logo"></a>
-                <a href="https://www.twitter.com" target="_blank"><img class="img-footer"
-                        src="../images/footer/twitter.png" alt="Twitter Logo"></a>
-                <a href="https://www.Whatsapp.com" target="_blank"><img class="img-footer"
-                        src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
-            </div>
-        </footer>
-    </div>
+    </footer>
     <!-- FIN FOOTER -->
+    <!-- Import boostrap.css -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <!-- Import Materializecss.css -->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
