--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,9 +13,12 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <!--Import my css -->
-    <link rel="stylesheet" href="../css/style3..css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+      <!-- KEYWORDS -->
+      <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, servicios, services">
+      <meta name="Description" content="Conoce los servicios que tenemos disponibles!">
 </head>
 <!-- Catering -->
 <!-- Fiesta -->
@@ -23,18 +26,6 @@
 <!-- Vianda -->
 
 <body>
-    <!-- <header>
-        <img class="logo" src="../images/muestra/logo.png" alt="logo-empresa">
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li class="navbar-list-li"><a class="navbar-list-text" href="../index.html">HOME</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./servicios.html">SERVICIOS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./galeria.html">GALERIA</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./nosotros.html">NOSOTROS</a></li>
-                <li class="navbar-list-li"><a class="navbar-list-text" href="./contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-    </header> -->
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -47,10 +38,10 @@
                 <div class="collapse navbar-collapse navbar-per" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./servicios.html">Servicios</a>
+                            <a class="nav-link active" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./galeria.html">Galeria</a>
@@ -69,14 +60,11 @@
     </header>
     <!-- FIN HEADER -->
     <!-- MAIN SERVICIOS -->
-    <main>
+    <main class="servicios">
         <div class="text-center mt-4 mb-4">
             <h2>SERVICIOS</h2>
         </div>
         <!-- IMAGEN MAIN SERVICIOS -->
-        <!-- <div class="service-img-main">
-            <img src="../images/services/main-service.jpg" alt="Servicios Imagen">
-        </div> -->
         <div class="image-main-service  mx-auto">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -87,41 +75,6 @@
             </div>
         </div>
         <!-- FIN IMAGEN MAIN SERVICIOS -->
-        <!-- DESCRIPCION SERVICIOS -->
-        <!-- <div class="services-description">
-            <div class="service-block">
-                <h3>Catering</h3>
-                <img src="../images/services/catering.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aperiam necessitatibus odit
-                    quibusdam
-                    minima quos, beatae doloremque iste libero corporis corrupti deleniti, ipsum nulla unde aspernatur
-                    recusandae fugit quam fuga!</p>
-            </div>
-            <div class="service-block">
-                <h3>Fiesta</h3>
-                <img src="../images/services/fiesta.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse beatae non sint? Eaque iste dolor sed,
-                    sequi necessitatibus repellat, natus hic ea recusandae nihil nobis maxime quis quae, beatae quod?
-                </p>
-            </div>
-            <div class="service-block">
-                <h3>Gourmet</h3>
-                <img src="../images/services/gourmet.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo at maxime sunt quod officiis iure
-                    animi
-                    veniam laudantium aspernatur obcaecati veritatis ducimus illum minima, explicabo minus fugiat
-                    molestias
-                    nulla rem.</p>
-            </div>
-            <div class="service-block">
-                <h3>Vianda</h3>
-                <img src="../images/services/vianda.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, est quis aliquid deleniti
-                    consequuntur tempore nam suscipit unde at nulla modi soluta obcaecati vero, ea consequatur officiis
-                    cum
-                    debitis atque.</p>
-            </div>
-        </div> -->
         <div class="services">
             <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-evenly mb-4">
                 <div class="col expand">
@@ -170,25 +123,6 @@
     </main>
     <!-- FIN SERVICIOS -->
     <!-- INICIO FOOTER -->
-    <!-- <footer>
-        <p class="reserved">© 2022 BIANCULLI'S FOOD. TODOS LOS DERECHOS RESERVADOS.</p>
-        <form>
-            <input type="email" name="newslatter-email-footer" id="newslatter-email-footer"
-                placeholder="Ingresa tu email">
-            <input type="submit" name="newslatter-button-footer" id="newslatter-button-footer"
-                class="botton-newsletter">
-        </form>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img class="img-footer"
-                    src="../images/footer/instagram.png" alt="Instagram Logo"></a>
-            <a href="https://www.youtube.com" target="_blank"><img class="img-footer" src="../images/footer/youtube.png"
-                    alt="Youtube Logo"></a>
-            <a href="https://www.twitter.com" target="_blank"><img class="img-footer" src="../images/footer/twitter.png"
-                    alt="Twitter Logo"></a>
-            <a href="https://www.Whatsapp.com" target="_blank"><img class="img-footer"
-                    src="../images/footer/whatsapp.png" alt="Whatsapp Logo"></a>
-        </div>
-    </footer> -->
     <footer class="text-center text-lg-start text-muted color-lg flex">
         <!-- Copyright -->
         <div class="p-2 font-footer" style="background-color: #f8f9fa;">
