Correcciones tercer entrega

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!--Import my css -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- KEYWORDS -->
-    <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, home ">
+    <meta name="keywords"
+        content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, home ">
     <meta name="Description" content="Bienvenido a Bianculli's Food! El mejor catering del país">
 </head>
 
@@ -61,7 +62,8 @@
     </header>
     <!-- MAIN -->
     <main class="index">
-        <section class="home-carrousel mx-auto mt-4 mb-4">
+        <h2 class="text-index mt-5">Bianculli's Food</h2>
+        <section class="home-carrousel mx-auto mt-4 ">
             <!-- <img src="./images/home/carrousel1.jpg" alt="carrousel-home"> -->
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -87,23 +89,32 @@
                 </button>
             </div>
         </section>
-        <section class="home-img-with-text ms-5 me-5">
-            <div class="card text-bg-light  border-dark mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4 img-text">
-                        <img src="./images/home/nosotros.jpg" class="img-fluid rounded-start img-100"
-                            alt="nosotros.jpg">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body tamaño">
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit labore
-                                exercitationem sit atque, natus nemo tenetur maxime perspiciatis explicabo dicta aliquid
-                                ipsa, non assumenda debitis facere. Distinctio quisquam libero delectus.</p>
+        <div class="indexflex mb-3">
+            <section class="home-img-with-text mt-5 ms-5 me-5">
+                <div class="card text-bg-light  border-dark mb-3" style="max-width: 540px;">
+                    <div class="row g-0 index-center" style="justify-content: center;">
+                        <div class="col-md-4 img-text">
+                            <img src="./images/home/nosotros.jpg" class="img-fluid rounded-start img-100"
+                                alt="nosotros.jpg">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body tamaño">
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit
+                                    labore
+                                    exercitationem sit atque, natus nemo tenetur maxime perspiciatis explicabo dicta
+                                    aliquid
+                                    ipsa, non assumenda debitis facere. Distinctio quisquam libero delectus.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="img-fondo">
+                <div class="card">
+                    <img src="./images/home/imagen-fondo.jpg" class="card-img" alt="home-image">
+                </div>
+            </section>
+        </div>
     </main>
     <!-- FOOTER -->
     <footer class="text-center text-lg-start text-muted color-lg flex">
