--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <img src="images/logo.jpg" alt="logo-empresa" class="logo">
+                <a href="index.html"><img src="images/logo.png" alt="logo-empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -99,11 +99,9 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body tamaño">
-                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit
-                                    labore
-                                    exercitationem sit atque, natus nemo tenetur maxime perspiciatis explicabo dicta
-                                    aliquid
-                                    ipsa, non assumenda debitis facere. Distinctio quisquam libero delectus.</p>
+                                <p class="card-text"><span class="maincenter">¡Somos Bianculli's Food!</span><br>
+                                    Nos encanta estar presentes en momentos de reunión, alegría y festejo. Desde nuestros inicios, estamos en la búsqueda constante de nuevos productos y técnicas para que esas experiencias sean diferentes.
+                                </p>
                             </div>
                         </div>
                     </div>
