--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -26,7 +26,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+             <a href="../index.html"><img src="../images/logo.png" alt="logo-empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
     <!-- FIN HEADER -->
     <!-- MAIN NOSOSTROS -->
     <main class="nosotros">
-        <h2>LA EMPRESA</h2>
+        <h2>Bianculli's Food</h2>
         <!-- <div class ="nosotros-text">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolore in corporis. Natus consequatur
@@ -68,11 +68,23 @@
                 </p>
                 <iframe src="../images/nosotros/nosotros.mp4" alt="Sobre Nosotros">
             </div> -->
+        <div class="img-nosotros">
+            <img src="../images/nosotros/card-text.jpg" class="img-fluid" alt="card-text2" >
+        </div>
         <div class="tamaño-nosotros ms-5 me-5">
-            <div class="card mb-3 text-center text-bg-light border-dark">
-                <img src="../images/nosotros/card-text.jpg" class="card-img-top img-tamaño mx-auto mt-2" alt="nosotros-image">
+            <div class="card mb-3 nosotros-card">
                 <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi neque commodi illo autem eveniet dicta aspernatur rerum, corrupti nostrum quam doloremque quas ab ad amet recusandae hic, eum placeat ipsa accusantium, odio officiis. Fuga veritatis modi provident magnam consequuntur quasi maxime quam pariatur rerum nobis, in sapiente sequi eius voluptatum.</p>
+                    <p class="card-text">A lo largo de todo este tiempo, esde que creamos Bianculli's Food, hemos adquirido una vasta experiencia que nos ha transformado en una empresa que es hoy sinónimo de excelencia
+                        <br>
+                        <br>
+                        Desde el comienzo nos ha caracterizado la <b>seriedad</b> y el <B>trato personalizado</B>. Seguimos comenzando cada evento con una entrevista personal, 
+                        en donde lo asesoramos sobre las mejores alternativas para su evento, 
+                        con el objetivo de superar las expectativas de cada quien se acerca a nosotros.
+                        <br>
+                        <br>
+                        Somos una empresa familiar dónde el esfuerzo, la trayectoria y la confianza abundan, permitiendo un excelente posicionamiento en le mercado.
+                        El vínculo familiar se transmite tanto entre quienes trabajamos dentro de Bianculli's, como a cada uno de nuestros clientes.
+                    </p>
                     <p class="card-text"><small class="text-muted">Bianculli's Food</small></p>
                 </div>
             </div>
