--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <a href="../index.html"><img src="../images/logo.png" alt="logo-empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -82,8 +82,7 @@
                         <img src="../images/services/catering.jpg" class="card-img-top mx-auto" alt="catering">
                         <div class="card-body">
                             <h5 class="card-title text-center fs-2 ">Catering</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Con Nuestro servicio de <b>Catering Premium</b> diseñamos una nueva opción de menú con el objetivo de darle mas dinamismo a nuestro servicio.</p>
                         </div>
                     </div>
                 </div>
@@ -92,8 +91,7 @@
                         <img src="../images/services/fiesta.jpg" class="card-img-top mx-auto" alt="fiesta">
                         <div class="card-body">
                             <h5 class="card-title text-center fs-2">Fiesta</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Nuestros servicios <B>Fiesta</B> escapan de las formas tradicionales de agasajar a tus invitados y te ofrecemos tres opción pizza , pasta o tacos</p>
                         </div>
                     </div>
                 </div>
@@ -102,8 +100,7 @@
                         <img src="../images/services/gourmet.jpg" class="card-img-top mx-auto" alt="gourmet">
                         <div class="card-body">
                             <h5 class="card-title text-center fs-2">Gourmet</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <p class="card-text">En nuestros servicios <b>Gourmet</b> vas a encontrar la mayor variedad, calidad y practicidad para brindarle a tus invitados.</p>
                         </div>
                     </div>
                 </div>
@@ -112,8 +109,7 @@
                         <img src="../images/services/vianda.jpg" class="card-img-top mx-auto" alt="vianda">
                         <div class="card-body">
                             <h5 class="card-title text-center fs-2">Viandas</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Nuestras <b>Viandas</b> consisten en la elaboración de los pedidos en nuestra planta que luego serán transportadas en una exclusiva logística refrigerada. </p>
                         </div>
                     </div>
                 </div>
