--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,8 @@
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <!-- KEYWORDS -->
-    <meta name="keywords" content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, contacto">
+    <meta name="keywords"
+        content="catering, comida, fiesta, bianculli's food, servicio a mesa, casamientos, eventos, contacto">
     <meta name="Description" content="Contactanos para mas informacion acerca de nuestros servicios!">
 </head>
 
@@ -27,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <a href="../index.html"><img src="../images/logo.png" alt="logo-empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -70,8 +71,8 @@
         </div>
         <div class="row ">
             <div class="col-lg-7 mx-auto">
-                <div class="card mt-2 mx-auto p-4 bg-light">
-                    <div class="card-body bg-light">
+                <div class="card mt-2 mx-auto p-4">
+                    <div class="card-body">
 
                         <div class="container">
                             <form id="contact-form" role="form">
@@ -134,8 +135,7 @@
 
                                         <div class="col-md-12">
 
-                                            <input type="submit" class="btn btn-success btn-send mt-1 pt-2 btn-block
-                                      " value="Enviar">
+                                            <input type="submit" class="btn btn-send mt-1 pt-2 btn-block btn-background" value="Enviar">
 
                                         </div>
 
