--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,7 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <img src="../images/logo.png" alt="logo-empresa" class="logo">
+                <a href="../index.html"><img src="../images/logo.png" alt="logo-empresa" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
