--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -74,7 +74,7 @@
         <div class="tamaño-nosotros ms-5 me-5">
             <div class="card mb-3 nosotros-card">
                 <div class="card-body">
-                    <p class="card-text">A lo largo de todo este tiempo, esde que creamos Bianculli's Food, hemos adquirido una vasta experiencia que nos ha transformado en una empresa que es hoy sinónimo de excelencia
+                    <p class="card-text">A lo largo de todo este tiempo, desde que creamos Bianculli's Food, hemos adquirido una vasta experiencia que nos ha transformado en una empresa que es hoy sinónimo de excelencia
                         <br>
                         <br>
                         Desde el comienzo nos ha caracterizado la <b>seriedad</b> y el <B>trato personalizado</B>. Seguimos comenzando cada evento con una entrevista personal, 
